# tymenu

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  app.py  dev_requirements.txt  docker-compose.yml  entrypoint.sh  mysql_deploy_requirements.txt  mysql_requirements.txt  pyproject.toml  remake_db.py  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
backups/: README.md  docker_import_db.sh  run_default_backup.sh
migrations/: env.py
migrations/versions/: 47b6f6e4dfc2_menu_plan.py  777ce7844aa3_add_cooking_time.py  808557f08747_move_from_kcal_to_gram.py  9e91f4e1d13c_.py  9f8ede5642b6_source_as_text.py  cb3550da1ea9_add_kcal_breakdown.py
src/tymenu/: __init__.py  config.py  decorators.py  email.py  factory.py  fake.py  log.py  models.py  plugins.py  resources.py  search.py  timestamp.py  utils.py
src/tymenu/auth/: __init__.py  blueprint.py  forms.py  views.py
src/tymenu/main/: __init__.py  blueprint.py  errors.py  forms.py  views.py
src/tymenu/menu/: __init__.py  blueprint.py  forms.py  views.py
src/tymenu/plan/: __init__.py  blueprint.py  forms.py  views.py
src/tymenu/static/: styles.css
src/tymenu/templates/: _macros.html  _recipes.html  _users.html  base.html  index.html  links.html  profile.html  users.html
src/tymenu/templates/auth/: change_email.html  login.html  register.html  unconfirmed.html
src/tymenu/templates/auth/email/: reset_password.html  reset_password.txt
src/tymenu/templates/main/: change_username.html  profile.html
src/tymenu/templates/menu/: add_to_plan.html  edit_recipe.html  new_recipe.html  recipe.html  search.html  search_results.html  upload_image.html
src/tymenu/templates/menu_plan/: add_recipe_plan.html  new_plan.html  plan.html  plan_old.html  view_plan.html
tests/: conftest.py  test_app.py
tests/models/: conftest.py  test_recipe.py  test_user.py
