[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-select = ["I", "RUF", "FA", "UP006", "UP007"]
exclude = [
    "__init__.py",
]
ignore = ["E501", "RUF012"]

[tool.ruff.isort]
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]
