[metadata]
name = tymenu
author = Alexander S. Tygesen
author_email = atygesen@hotmail.com
version = file: src/tymenu/_version.txt
description = Tygesen Menu System
classifiers =
        Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/atygesen/tymenu
keywords =
    Menu System
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atygesen/tymenu

[options]
# Package_data is stuff from MANIFEST.in?
include_package_data = true
python_requires = >=3.9
package_dir=
    =src
packages=find:
install_requires =
    flask >= 2.0.2
    flask-wtf >= 1.0.0
    flask-bootstrap >= 3.3.7.1
    flask-moment >= 1.0.2
    flask-migrate >= 3.1.0
    flask-sqlalchemy >= 2.5.1
    flask-login >= 0.5.0
    flask-mail >= 0.9.1
    email_validator >= 1.1.3
    sqlalchemy >= 1.4.27
    click >= 8.0.3

[options.extras_require]
dev =
    pre-commit
    black
    flake8
    pytest
    pyclean

[options.packages.find]
where=src
