[metadata]
name = tymenu
author = Alexander S. Tygesen
author_email = atygesen@hotmail.com
version = file: src/tymenu/_version.txt
description = Tygesen Menu System
classifiers =
        Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/atygesen/tymenu
keywords =
    Menu System
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atygesen/tymenu

[options]
# Package_data is stuff from MANIFEST.in
include_package_data = true
python_requires = >=3.9
package_dir=
    =src
packages=find:
install_requires = file:requirements.txt


[options.extras_require]
mysql = file:mysql_requirements.txt
dev = file:dev_requirements.txt
test = file:test_requirements.txt

[options.packages.find]
where=src
